--- a/index.html
+++ b/index.html
@@ -3,19 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      property="og:url"
-      content="http://www.nytimes.com/2015/02/19/arts/international/when-great-minds-dont-think-alike.html"
-    />
-    <meta property="og:type" content="article" />
-    <meta property="og:title" content="When Great Minds Don’t Think Alike" />
+    <meta property="og:url" content="shorenabakradze.github.io/final/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="About Maison Louis Marie" />
     <meta
       property="og:description"
       content="How much does culture influence creative thinking?"
     />
     <meta
       property="og:image"
-      content="http://static01.nyt.com/images/2015/02/19/arts/international/19iht-btnumbers19A/19iht-btnumbers19A-facebookJumbo-v2.jpg"
+      content="https://th.bing.com/th/id/R.3c27bca90a3859011351878ae2dde792?rik=tT9w9dOvLyDI%2bQ&pid=ImgRaw&r=0"
     />
     <title>Maison loures Maria</title>
     <link rel="stylesheet" href="Perfumes.html" />
