--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="About Maison Louis Marie" />
     <meta
       property="og:description"
-      content="How much does culture influence creative thinking?"
+      content="A botanical tradition since 1792"
     />
     <meta
       property="og:image"
