add meta description

--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Maison Louis Marie composes delicate scents, a floral tradition since 1792. Vegan / Cruelty / Paraben / Phthalate / Sulfate free. Complimentary shipping on orders over $50."
+    />
+    <meta
+      name="keywords"
+      content="Maison loures Maria, Perfumes, fragrance, sale"
+    />
+    <meta name="author" content="Shorena Bakradze" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:url" content="shorenabakradze.github.io/final/" />
     <meta property="og:type" content="website" />
@@ -65,10 +74,10 @@
           <div class="topnav">
             <a href="index.html" class="active">Maison Louis Marie</a>
             <div id="myLinks">
-              <li><a href="index.html" class="active">Our story</a></li>
-              <li><a href="parfiums.html">Perfumes</a></li>
-              <li><a href="sale.html">Sale</a></li>
-              <li><a href="#about.html">About Us</a></li>
+              <li><a href="#home" class="active">home</a></li>
+              <li><a href="#Perfumes">Perfumes</a></li>
+              <li><a href="#sale">Sale</a></li>
+              <li><a href="#Abou-Us">About Us</a></li>
             </div>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
               <i class="fa fa-bars"></i>
@@ -77,10 +86,10 @@
         </div>
         <nav class="navigation">
           <ul>
-            <li><a href="index.html" class="active">Our story</a></li>
-            <li><a href="parfiums.html">Perfumes</a></li>
-            <li><a href="sale.html">Sale</a></li>
-            <li><a href="#about.html">About Us</a></li>
+            <li><a href="#home" class="active">Home</a></li>
+            <li><a href="#Perfumes">Perfumes</a></li>
+            <li><a href="#sale">Sale</a></li>
+            <li><a href="#Abou-Us">About Us</a></li>
           </ul>
         </nav>
       </div>
@@ -96,7 +105,7 @@
       </script>
     </header>
 
-    <section>
+    <section id="home">
       <div class="video-box">
         <video controls autoplay>
           <source src="video/MLM-No13.mp4" type="video/mp4" />
@@ -119,7 +128,7 @@
       </div>
     </section>
 
-    <section>
+    <section id="Perfumes">
       <hr />
       <div class="gallery">
         <div class="image-container">
@@ -223,7 +232,7 @@
       </div>
     </section>
 
-    <section>
+    <section id="sale">
       <hr />
       <div class="gallery2">
         <div class="image-container2">
@@ -299,7 +308,7 @@
       </div>
     </section>
 
-    <section>
+    <section id="Abou-Us">
       <hr />
       <div class="about-container flex-about">
         <div class="left-wrapper">
