--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
                 style="color: #000000"
               ></i
             ></a>
+            <a href="https://maisonlouismarie.com/account/login">
             <i class="fa-regular fa-user fa-beat" style="color: #000000"></i>
+          </a>
           </div>
           <div class="forms-box">
             <h2>Maison Louis Marie</h2>
@@ -60,6 +62,11 @@
             <form action="/action_page.php">
               <input type="text" name="User" placeholder="User Name" />
               <input type="text" name="password" placeholder="password" />
+              <input type="submit" value="sing in" />
+            </form>
+          </div>
+          <div class="form1">
+            <form action="/action_page.php">
               <input type="submit" value="sing in" />
             </form>
           </div>
@@ -364,12 +371,13 @@
         <i class="fa-brands fa-rocketchat fa-fade" style="color: #cec7b5"></i>
       </div>
       <hr />
+      <div class="flex-footer">
       <div class="footer-logo">
         <a class="logo-f" href="index.html"
           ><img src="image/head-logo.jpg" alt="logo"
         /></a>
       </div>
-      <div class="flex-footer">
+      
         <div class="footer-ul">
           <ul>
             <li>
