--- a/index.html
+++ b/index.html
@@ -81,10 +81,12 @@
           <div class="topnav">
             <a href="index.html" class="active">Maison Louis Marie</a>
             <div id="myLinks">
+              <ul>
               <li><a href="#home" class="active">home</a></li>
               <li><a href="#Perfumes">Perfumes</a></li>
               <li><a href="#sale">Sale</a></li>
               <li><a href="#Abou-Us">About Us</a></li>
+            </ul>
             </div>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
               <i class="fa fa-bars"></i>
@@ -114,14 +116,14 @@
             you feel like you are sunbathing on the Amalfi Coast. Key notes are
             Muguet, Tuscan Fig, Tonka.
           </p>
-          <button class="black-box-video">
-            <a
+          <div class="black-box-video">
+            <a 
               class="video-box-shop"
               href="https://maisonlouismarie.com/collections/all?family=Fresh&fragrance=No.13+Nouvelle+Vague&sort_by=manual"
               target="_blank"
               >shop new</a
             >
-          </button>
+          </div>
         </div>
       </div>
     </section>
