--- a/index.html
+++ b/index.html
@@ -43,6 +43,38 @@
   <body>
     <header>
       <div class="header-container">
+        <div class="header-nav">
+          <div class="forms-box">
+            <a class="header-a" href="index.html"
+              ><img src="image/head-logo.jpg" alt="logo"
+            /></a>
+            <h2 class="forms-box">Maison Louis Marie</h2>
+          </div>
+          <div class="mobile-container">
+            <div class="topnav">
+              <a href="index.html" class="active">Maison Louis Marie</a>
+              <div id="myLinks">
+                <ul>
+                  <li><a href="#home" class="active">home</a></li>
+                  <li><a href="#Perfumes">Perfumes</a></li>
+                  <li><a href="#sale">Sale</a></li>
+                  <li><a href="#Abou-Us">About Us</a></li>
+                </ul>
+              </div>
+              <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                <i class="fa fa-bars"></i>
+              </a>
+            </div>
+          </div>
+          <nav class="navigation">
+            <ul>
+              <li><a href="#home" class="active">Home</a></li>
+              <li><a href="#Perfumes">Perfumes</a></li>
+              <li><a href="#sale">Sale</a></li>
+              <li><a href="#Abou-Us">About Us</a></li>
+            </ul>
+          </nav>
+        </div>
         <div class="header-top">
           <div class="header-top-i">
             <a href="#basket-shopping.html"
@@ -54,9 +86,6 @@
             <a href="https://maisonlouismarie.com/account/login">
               <i class="fa-regular fa-user fa-beat" style="color: #000000"></i>
             </a>
-          </div>
-          <div class="forms-box">
-            <h2>Maison Louis Marie</h2>
           </div>
           <div class="form1">
             <form action="/action_page.php">
@@ -71,36 +100,6 @@
             </form>
           </div>
         </div>
-      </div>
-
-      <div class="header-nav">
-        <a class="header-a" href="index.html"
-          ><img src="image/head-logo.jpg" alt="logo"
-        /></a>
-        <div class="mobile-container">
-          <div class="topnav">
-            <a href="index.html" class="active">Maison Louis Marie</a>
-            <div id="myLinks">
-              <ul>
-              <li><a href="#home" class="active">home</a></li>
-              <li><a href="#Perfumes">Perfumes</a></li>
-              <li><a href="#sale">Sale</a></li>
-              <li><a href="#Abou-Us">About Us</a></li>
-            </ul>
-            </div>
-            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-              <i class="fa fa-bars"></i>
-            </a>
-          </div>
-        </div>
-        <nav class="navigation">
-          <ul>
-            <li><a href="#home" class="active">Home</a></li>
-            <li><a href="#Perfumes">Perfumes</a></li>
-            <li><a href="#sale">Sale</a></li>
-            <li><a href="#Abou-Us">About Us</a></li>
-          </ul>
-        </nav>
       </div>
       <script src="script.js"></script>
     </header>
@@ -117,7 +116,7 @@
             Muguet, Tuscan Fig, Tonka.
           </p>
           <div class="black-box-video">
-            <a 
+            <a
               class="video-box-shop"
               href="https://maisonlouismarie.com/collections/all?family=Fresh&fragrance=No.13+Nouvelle+Vague&sort_by=manual"
               target="_blank"
@@ -172,7 +171,7 @@
         <div class="image-container">
           <img src="image/05.webp" alt="image" />
           <div class="child">
-            <p>Perfume Oil No.05 Kandilli</p>
+            <p>Perfume Oil  No.05  Kandilli</p>
             <span>price: $65.00</span>
             <a
               href="https://www.fragrantica.com/perfume/Maison-Louis-Marie/No-05-Kandilli-54109.html"
@@ -308,21 +307,21 @@
       </div>
     </section>
     <section id="Abou-Us">
-     <hr>
+      <hr />
       <div class="about-container flex-about">
         <div class="left-wrapper">
           <img src="image/1.jpg" alt="image" />
         </div>
         <div class="right-wrapper">
           <div class="right-wrapper-1">
-          <h4>200 years later</h4>
-          <a href="https://www.facebook.com/MaisonLouisMarie/" target="_blank"
-            ><img src="image/facebook.svg" alt="fb-icon"
-          /></a>
-          <a href="https://www.facebook.com/MaisonLouisMarie/" target="_blank"
-            ><img src="image/facebook-messenger.svg" alt="fb-icon"
-          /></a>
-        </div>
+            <h4>200 years later</h4>
+            <a href="https://www.facebook.com/MaisonLouisMarie/" target="_blank"
+              ><img src="image/facebook.svg" alt="fb-icon"
+            /></a>
+            <a href="https://www.facebook.com/MaisonLouisMarie/" target="_blank"
+              ><img src="image/facebook-messenger.svg" alt="fb-icon"
+            /></a>
+          </div>
           <p>
             Marie du Petit Thouars grew up in Belgium, playing in her
             grandfather’s nursery while making candles and experimenting with
@@ -334,7 +333,6 @@
             Marie believes in making every effort to preserve the unique terroir
             of each fragrance element as it is derived from nature.
           </p>
-          
         </div>
       </div>
       <div class="history">
